--- a/_config.yml
+++ b/_config.yml
@@ -1,119 +1,43 @@
+# Welcome to Jekyll!
 #
-# Basic settings.
+# This config file is meant for settings that affect your whole blog, values
+# which you are expected to set up once and rarely edit after that. If you find
+# yourself editing this file very often, consider using Jekyll's data files
+# feature for the data you need to update frequently.
 #
-# url: http://localhost:4000
-# baseurl: ""
-url: http://ttskch.github.io
-baseurl: /jekyll-ttskch-theme
-title: Your name
-description: Some descriptions of yourself.
-avatar: /assets/img/ogp.png
-# favicon: /favicon.ico
-favicon: /assets/img/ogp.png
-# language: ja
-language: en
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
 
-#
-# Icons
-#
-icons:
-  rss: true
-  email:
-  github: ttskch
-  bitbucket:
-  twitter: ttskch
-  facebook:
-  google_plus:
-  tumblr:
-  behance:
-  dribbble:
-  flickr:
-  instagram:
-  linkedin: # full URL
-  pinterest:
-  reddit:
-  soundcloud:
-  stack_exchange: # full URL
-  steam:
-  wordpress:
-  youtube:
+# Site settings
+# These are used to personalize your new site. If you look in the HTML files,
+# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
+# You can create any custom variable you would like, and they will be accessible
+# in the templates via {{ site.myvariable }}.
+title: Stonesteel's blog
+email: stonesteel1023@gmail.com
+description: >- # this means to ignore newlines until "baseurl:"
+  Write an awesome description for your new site here. You can edit this
+  line in _config.yml. It will appear in your document head meta (for
+  Google search results) and in your feed.xml site description.
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: jekyllrb
+github_username:  jekyll
 
-#
-# Prettify url.
-#
-permalink: pretty
-
-#
-# Scripts.
-#
-google_analytics: # e.g. UA-000000-01
-disqus:
-
-#
-# Localizations.
-#
-str_next: Next
-str_prev: Prev
-str_read_more: Read more...
-str_search: Search
-str_recent_posts: Recent posts
-str_show_all_posts: Show all posts
-
-#
-# Recent posts.
-#
-recent_posts_num: 10
-
-#
-# Pagination.
-#
-paginate: 10
-paginate_path: page/:num
-
-#
-# Social.
-#
-share_buttons:
-  twitter: true
-  facebook: false # needs ogp.fb.app_id
-  hatena: false
-ogp:
-  image_url: //ttskch.github.io/jekyll-ttskch-theme/assets/img/ogp.png
-  fb:
-    admin: # facebook admin id
-    app_id: # facebook application id
-
-#
-# Gems.
-#
-gems:
-  - jekyll-paginate
-  - jemoji
-
-#
-# Styles: see "_sass/base/_variables.scss"
-#
-
-#
-# !! Danger zone !!
-#
-
-include: ["_pages"]
-
+# Build settings
 markdown: kramdown
-kramdown:
-  input: GFM
-  syntax_highlighter: rouge
+theme: minima
+plugins:
+  - jekyll-feed
 
-excerpt_separator: <!--more-->
-
-sass:
-  sass_dir: _sass
-  style: :compressed # or :expanded
-
-exclude:
-  - Gemfile
-  - Gemfile.lock
-  - LICENSE
-  - README.md
-  - vendor
+# Exclude from processing.
+# The following items will not be processed, by default. Create a custom list
+# to override the default setting.
+# exclude:
+#   - Gemfile
+#   - Gemfile.lock
+#   - node_modules
+#   - vendor/bundle/
+#   - vendor/cache/
+#   - vendor/gems/
+#   - vendor/ruby/
