--- a/_config.yml
+++ b/_config.yml
@@ -16,13 +16,11 @@
 title: Stonesteel's blog
 email: stonesteel1023@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Pro 'Grammar' 돈 받고 글 짓는 사람
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: stonesteel1023
+github_username:  stonesteel1023
 
 # Build settings
 markdown: kramdown
